--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
+
 /* Header____________________________________________________________ */
 
 .logo {
@@ -30,6 +31,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 .nav__list-item {
   display: flex;
   justify-content: space-between;
@@ -46,10 +48,12 @@ body {
   text-transform: uppercase;
   position: relative;
 }
+
 .nav__list-item-link:hover::after {
   opacity: 1;
   visibility: visible;
 }
+
 .nav__list-item-link::after {
   display: block;
   width: 100%;
@@ -62,9 +66,11 @@ body {
   visibility: hidden;
   transition: opacity 0.5s linear;
 }
+
 .nav__list-item-link:hover {
   color: #f38181;
 }
+
 /* Section service________________________________________________________- */
 
 .servise-title-wrapp {
@@ -84,6 +90,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
 }
+
 .title-servise::after {
   display: table;
   content: "";
@@ -111,14 +118,24 @@ body {
 }
 
 .servises__list-item {
-  width: 382px;
+  width: 270px;
   list-style-type: none;
+  position: relative;
+  padding-left: 50px;
+
+
 }
+
+
+.servises__list-item:nth-child(n + 4) {
+  margin-top: 100px;
+}
+
 .servises__list-item-title {
   color: #333333;
   font-family: "Montserrat";
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
@@ -127,7 +144,8 @@ body {
   font-family: "Roboto";
   font-size: 15px;
   font-weight: 400;
-  line-height: 24px;
+
+  /* width: 262px; */
 }
 
 /* section TEAm_____________________________________________________ */
@@ -167,6 +185,7 @@ body {
   padding-bottom: 20px;
   text-transform: none;
 }
+
 .team-descript-wrapper {
   display: flex;
   justify-content: center;
@@ -181,4 +200,111 @@ body {
   line-height: 24px;
   text-align: center;
   margin-bottom: 80px;
+}
+
+/* icon---------------------------------------------------------------------------- */
+
+
+
+.photography::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/ALARM.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+}
+
+.web-design::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/LINE_GRAPH.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+
+}
+
+.creativity::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/COMPUTER_/_OK.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+
+}
+
+.seo::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/BOOK_2.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+
+}
+
+.css::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/HOME.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+
+}
+
+.digital::before {
+  display: block;
+  content: "";
+  width: 32px;
+  height: 31px;
+  background-image: url("../img/IMAGE.png");
+  top: 16px;
+  left: 0;
+  position: absolute;
+
+
+}
+
+/* section 2 ______________________________________________________________ */
+
+.team-photo__list {
+  display: flex;
+  /* position: relative; */
+
+}
+
+.team-photo__list-item {
+  list-style-type: none;
+}
+
+/* .photo-dev:hover {
+  width: 380px;
+  height: 470px;
+  background-color: #95e1d3;
+  transform: translate(10px 10px);
+  position: absolute; */
+
+}
+
+
+.team-photo__list-item:not(:last-child) {
+  margin-right: 30px;
 }
